# cengal_app_dir_path_finder

./: README.md  example.py  pyproject.toml  requirements.txt
cengal_app_dir_path_finder/: __init__.py
cengal_app_dir_path_finder/versions/: __init__.py
cengal_app_dir_path_finder/versions/v_0/: __init__.py
